--- a/filesearcher/build.gradle
+++ b/filesearcher/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.library'
-
+apply plugin: 'com.github.dcendents.android-maven'
+group='com.github.YuanWenHai'
 android {
     compileSdkVersion 23
     buildToolsVersion "24.0.3"
@@ -29,4 +30,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.0.0'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:recyclerview-v7:23.0.0'
+    compile 'com.android.support:cardview-v7:23.0.0'
 }
