--- a/filesearcher/src/main/AndroidManifest.xml
+++ b/filesearcher/src/main/AndroidManifest.xml
@@ -1,9 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.will.filesearcher">
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <application android:allowBackup="true" android:label="@string/app_name"
         android:supportsRtl="true">
-
+        <activity android:name=".file_searcher.FileSearcherActivity"
+            android:theme="@style/CustomTheme"/>
     </application>
 
 </manifest>
