--- a/filesearcher/src/main/AndroidManifest.xml
+++ b/filesearcher/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <application android:allowBackup="true" android:label="@string/app_name"
         android:supportsRtl="true">
         <activity android:name=".file_searcher.FileSearcherActivity"
-            android:theme="@style/CustomTheme"/>
+            android:theme="@style/FileSearcherActivityTheme"/>
     </application>
 
 </manifest>
