--- a/filesearcher/src/main/AndroidManifest.xml
+++ b/filesearcher/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <application android:allowBackup="true"
         android:supportsRtl="true">
+        <activity android:name=".delegate.FileSearcherDelegateActivity"
+            android:theme="@style/FileSearcherTransParentTheme"/>
+        <activity android:name=".FileSearcherActivity"
+            android:theme="@style/FileSearcherActivityTheme"/>
     </application>
 
 </manifest>
