--- a/filesearcher/src/main/AndroidManifest.xml
+++ b/filesearcher/src/main/AndroidManifest.xml
@@ -6,7 +6,8 @@
         <activity android:name=".delegate.FileSearcherDelegateActivity"
             android:theme="@style/FileSearcherTransParentTheme"/>
         <activity android:name=".FileSearcherActivity"
-            android:theme="@style/FileSearcherActivityTheme"/>
+            android:theme="@style/FileSearcherActivityTheme"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
